--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,9 @@
-#baseUrl: 'https://major.io/'
-baseUrl: "https://majorhayden.gitlab.io/major.io"
+baseUrl: 'https://major.io/'
 languageCode: en-us
 title: "major.io"
 theme: lanyon
 copyright: '&copy; Major Hayden'
-canonifyURLs: true
+canonifyURLs: false
 paginate: 5
 pygmentsCodeFences: true
 pygmentsUseClasses: true
