Add build-site.sh script for gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,7 @@ variables:
 
 pages:
   script:
-  - hugo
-  - cp -av public/feed/index.xml public/feed/index.html
+  - ./build-site.sh
   artifacts:
     paths:
     - public
