--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,3 +21,5 @@ firebase_deploy:
     - bower install --allow-root
     - firebase use --token $FIREBASE_TOKEN major-io-1f024
     - firebase deploy -m "GitLab Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
+  only:
+    - master
