--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,9 @@ firebase_deploy:
     - ./build-site.sh
     - firebase use --token $FIREBASE_TOKEN major-io
     - firebase deploy -m "GitLab Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
+  cache:
+    paths:
+      - node_modules/
+    key: "$CI_BUILD_REPO"
   only:
     - master
