--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ firebase_deploy:
     - tar xvf hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
     - mv hugo /usr/local/bin/
     - ./build-site.sh
-    - firebase use major-io --token ${FIREBASE_TOKEN}
+    - firebase use major-io-1f024 --token ${FIREBASE_TOKEN}
     - firebase deploy -m "GitLab Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token ${FIREBASE_TOKEN}
   cache:
     paths:
