--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,17 +27,17 @@ pages:
   only:
     - master
 
-deploy:firebase:
-  image: node:latest
-  stage: deploy
-  dependencies:
-    - generate:blog
-  script:
-    - npm install -g firebase-tools
-    - firebase use major-io-1f024 --token ${FIREBASE_TOKEN}
-    - firebase deploy -m "GitLab Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token ${FIREBASE_TOKEN}
-  cache:
-    paths:
-      - node_modules/
-  only:
-    - master
+# deploy:firebase:
+#   image: node:latest
+#   stage: deploy
+#   dependencies:
+#     - generate:blog
+#   script:
+#     - npm install -g firebase-tools
+#     - firebase use major-io-1f024 --token ${FIREBASE_TOKEN}
+#     - firebase deploy -m "GitLab Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token ${FIREBASE_TOKEN}
+#   cache:
+#     paths:
+#       - node_modules/
+#   only:
+#     - master
