--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ params:
   logo:
     logoText: "major.io"
 sitemap:
-  changefreq: monthly
+  changefreq: weekly
   priority: 0.5
   filename: sitemap.xml
 author:
