Fix license in RSS feeds

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ PygmentsCodeFences = true
 PygmentsStyle = "solarized-dark"
 
 rssLimit  = 25  # Maximum number of items in the RSS feed.
-copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+copyright = "This work is licensed under a Creative Commons Attribution-ShareAlike 2.0 Generic License."
 
 # googleAnalytics = ""
 # disqusShortname = ""
