--- a/config.toml
+++ b/config.toml
@@ -78,8 +78,7 @@ disableHugoGeneratorInject = false
   contentTypeName = "posts"
 
   # Default theme "light" or "dark"
-  defaultTheme = "light"
-  themeColor = "#252627"
+  defaultTheme = "dark"
 
   # Colors for favicons
   [params.favicon.color]
