Switch to the light theme by default
The switcher is flaky and light is the default for the theme. 🤷‍♂️

--- a/config.toml
+++ b/config.toml
@@ -81,7 +81,7 @@ disableHugoGeneratorInject = false
   contentTypeName = "posts"
 
   # Default theme "light" or "dark"
-  defaultTheme = "dark"
+  defaultTheme = "light"
 
   # Colors for favicons
   [params.favicon.color]
