Add hidden twitter card field: .Site.Social.twitter
https://github.com/gohugoio/hugo/issues/1380

Signed-off-by: Major Hayden <major@mhtx.net>

--- a/config.toml
+++ b/config.toml
@@ -154,3 +154,6 @@ disableHugoGeneratorInject = false
     identifier = "posts"
     name       = "posts"
     url        = "posts/"
+
+[social]
+twitter = "mhayden"
