Add git sha to footer

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ buildExpored = false
 canonifyURLs = true
 enableRobotsTXT = true
 enableEmoji     = true
+enableGitInfo   = true
 enableMissingTranslationPlaceholders = false
 disableRSS     = false
 disableSitemap = false
