Show full text in RSS feed
Signed-off-by: Major Hayden <major@mhtx.net>

--- a/config.yml
+++ b/config.yml
@@ -36,6 +36,7 @@ params:
     defaultTheme: auto
     disableThemeToggle: false
 
+    ShowFullTextinRSS: true
     ShowReadingTime: true
     ShowShareButtons: true
     ShowPostNavLinks: true
