Update discord profile link

--- a/config.yml
+++ b/config.yml
@@ -94,7 +94,7 @@ params:
         - name: twitter
           url: "https://twitter.com/majorhayden"
         - name: discord
-          url: "https://discordapp.com/users/"
+          url: "https://discordapp.com/users/559804419261071363"
         - name: email
           url: "mailto:major+blog@mhtx.net"
         - name: keybase
