--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,15 @@
-# General Hugo configuration
-baseURL: "https://major.io/"
+baseURL: "https://major.io"
 title: "Major Hayden"
 paginate: 10
-theme: terminal
+theme: PaperMod
+
 enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
 rssLimit: 25
+
+# googleAnalytics: UA-123-45
 
 minify:
   disableXML: true
@@ -17,45 +19,134 @@ permalinks:
   posts: "/:year/:month/:day/:slug/"
 
 params:
-  contentTypeName: post
-  themeColor: green
-  showMenuItems: 5
-  showLanguageSelector: false
-  fullWidthTheme: false
-  centerTheme: true
-  autoCover: true
-  showLastUpdated: true
-  favicon: "/favicon.ico"
-  twitter:
-    creator: "majorhayden"
-    site: "major.io"
-languages:
-  en:
-    languageName: English
-    title: major.io
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: Major Hayden
+  description: "A social nerd writing about everything"
+  keywords:
+    - blog
+    - linux
+    - major hayden
+    - python
+    - open source
+    - security
+  author:
+    - Major Hayden
+  images:
+    - /images/2019-05-24-cranes-skycrapers.jpg
+  DateFormat: "2006-01-02"
+  defaultTheme: auto
+  disableThemeToggle: false
+
+  ShowFullTextinRSS: true
+  ShowReadingTime: true
+  ShowShareButtons: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: false
+  ShowCodeCopyButtons: false
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: true
+  tocopen: false
+
+  assets:
+    favicon: "/favicon.ico"
+    favicon16x16: "/favicon-16x16.png"
+    favicon32x32: "/favicon-16x16.png"
+    apple_touch_icon: "/apple-touch-icon.png"
+    safari_pinned_tab: "safari-pinned-tab.svg"
+
+  label:
+    text: "Major Hayden"
+    icon: /cowboy_emoji.png
+    iconHeight: 35
+
+  # profile-mode
+  profileMode:
+    enabled: true
+    title: "Major Hayden"
     subtitle: "A social nerd writing about everything"
-    owner: "Major Hayden"
-    keywords: "linux, technology"
-    copyright: "&copy; Major Hayden"
-    menuMore: Show more
-    readMore: Read more
-    readOtherPosts: Read other posts
-    newerPosts: Newer posts
-    olderPosts: Older posts
-    missingContentMessage: Page not found...
-    missingBackButtonLabel: Back to home page
-    params:
-      logo:
-        logoText: "🤠 major.io: A social nerd writing about everything"
-        logoHomeLink: /
-    menu:
-      main:
-        - identifier: cv
-          name: CV
-          url: /cv
-        - identifier: github
-          name: GitHub
-          url: https://github.com/major
-        - identifier: twitter
-          name: Twitter
-          url: https://twitter.com/majorhayden
+    imageUrl: "/images/circle-avatar-instagram.jpg"
+    # imageWidth: 120
+    # imageHeight: 120
+    imageTitle: "This is just a picture of me!"
+    buttons:
+      - name: Posts
+        url: posts
+      - name: Tags
+        url: tags
+      - name: CV
+        url: cv
+
+  # home-info mode
+  homeInfoParams:
+    Title: "Howdy! 👋🏻"
+    Content: |
+      Have a look at my [recent posts](/posts) or scan through the [list of
+      tags](/tags) for specific topics. Learn more about me in my [CV](/cv).
+
+  socialIcons:
+    - name: buymeacoffee
+      url: "https://www.buymeacoffee.com/majorhayden"
+    - name: github
+      url: "https://github.com/major"
+    - name: gitlab
+      url: "https://gitlab.com/majorhayden"
+    - name: twitter
+      url: "https://twitter.com/majorhayden"
+    - name: linkedin
+      url: "https://www.linkedin.com/in/majorhayden"
+    - name: discord
+      url: "https://discordapp.com/users/559804419261071363"
+    - name: email
+      url: "mailto:major+blog@mhtx.net"
+
+  # analytics:
+  #     google:
+  #         SiteVerificationTag: "XYZabc"
+  #     bing:
+  #         SiteVerificationTag: "XYZabc"
+  #     yandex:
+  #         SiteVerificationTag: "XYZabc"
+
+  cover:
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: true # hide on single page
+
+  editPost:
+    URL: "https://github.com/major/major.io/tree/main/content/"
+    Text: "Suggest Changes"
+    appendFilePath: true
+
+  # for search
+  # https://fusejs.io/api/options.html
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
+menu:
+  main:
+    - identifier: posts
+      name: Posts
+      url: /posts/
+      weight: 10
+    - identifier: tags
+      name: Tags
+      url: /tags/
+      weight: 20
+# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
+# pygmentsUseClasses: true
+# markup:
+#     highlight:
+#         # anchorLineNos: true
+#         codeFences: true
+#         guessSyntax: true
+#         lineNos: true
+#         style: monokai
