Add centos stream 9 + image builder post

--- a/config.yml
+++ b/config.yml
@@ -61,7 +61,7 @@ languages:
     copyright: All content CC-BY-SA
     menuMore: Show more
     readMore: Read more
-    readOtherPosts: Other posts I've written (some of it might even be good) 😉
+    readOtherPosts: Other posts I've written (some of them might even be good) 😉
     newerPosts: Read newer posts
     olderPosts: Read older posts
     missingContentMessage: Page not found...
