--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,19 +30,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.102.3
+      HUGO_VERSION: 0.104.3
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v2
+
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
@@ -52,6 +55,12 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
+
+      - name: Fix RSS feed
+        run: |
+          mkdir -vp public/feed
+          cp public/index.xml public/feed/index.xml
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
