Use actions-hugo to get the latest hugo version

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -32,10 +32,11 @@ jobs:
     env:
       HUGO_VERSION: 0.104.3
     steps:
-      - name: Install Hugo CLI
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
 
       - name: Checkout
         uses: actions/checkout@v3
