--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -39,7 +39,7 @@ dateFormat = "2 January 2006"
   #   { kickstarter = "https://www.kickstarter.com/profile/username" },
   #   { lastfm = "https://lastfm.com/user/username" },
    { linkedin = "https://linkedin.com/in/majorhayden" },
-  #   { mastodon = "https://mastodon.instance/@username" },
+   { mastodon = "https://fosstodon.org/@major" },
   #   { medium = "https://medium.com/username" },
   #   { microsoft = "https://www.microsoft.com/" },
   #   { orcid = "https://orcid.org/userid" },
