Minor config changes

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -5,7 +5,7 @@ isoCode = "en"
 weight = 1
 rtl = false
 
-title = "🤠 Major Hayden"
+title = "Major Hayden"
 # logo = "/images/major_twitter_avatar.jpg"
 description = "A social nerd writing about everything"
 copyright = "All content licensed [CC-BY-SA](https://creativecommons.org/licenses/by-sa/4.0/)"
