Revert "Run cloudfront deployment w/verbose"
This reverts commit 7116f35eb21b688cf91a930f39f25daffdee525a.

--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -55,4 +55,4 @@ jobs:
           cp public/index.xml public/feed/index.html
 
       - name: Deploy to S3
-        run: hugo deploy --verbose --force --maxDeletes -1 --invalidateCDN
+        run: hugo deploy --force --maxDeletes -1 --invalidateCDN
