--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,9 +5,9 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
-colorScheme = "slate"
+colorScheme = "congo"
 defaultAppearance = "dark" # valid options: light or dark
-autoSwitchAppearance = false
+autoSwitchAppearance = true
 
 enableSearch = true
 enableCodeCopy = true
@@ -31,11 +31,11 @@ mainSections = ["posts", "oldposts"]
 [article]
   showDate = true
   showDateUpdated = true
-  showAuthor = false
+  showAuthor = true
   showBreadcrumbs = true
   showDraftLabel = true
-  showEdit = false
-  editURL = "https://github.com/major/major.io/tree/main"
+  showEdit = true
+  editURL = "https://github.com/major/major.io/blob/main/content/"
   editAppendPath = true
   showHeadingAnchors = true
   showPagination = true
