--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -25,6 +25,14 @@
   pageRef = "cv"
   weight = 40
 
+[[main]]
+  identifier = "appearance"
+  weight = 99
+  [main.params]
+    action = "appearance"
+    # icon = "appearance"
+
+
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
 # the copyright notice. Configure as per the main menu above.
