--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,28 +5,33 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
-colorScheme = "congo"
+colorScheme = "fire"
 defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = true
 
 enableSearch = true
 enableCodeCopy = true
+enableImageLazyLoading = true
 
-mainSections = ["posts", "oldposts"]
 # robots = ""
+fingerprintAlgorithm = "sha256"
 
 [header]
-  layout = "basic" # valid options: basic, hamburger, custom
+  layout = "hybrid" # valid options: basic, hamburger, custom
+  logo = "major-hayden-high-resolution-logo-white-on-transparent-background.png"
+  logoDark = "major-hayden-high-resolution-logo-black-on-transparent-background.png"
+  showTitle = false
 
 [footer]
   showCopyright = true
   showThemeAttribution = true
-  showAppearanceSwitcher = true 
+  showAppearanceSwitcher = true
   showScrollToTop = true
 
 [homepage]
   layout = "profile" # valid options: page, profile, custom
-  showRecent = false
+  showRecent = true
+  recentLimit = 5
 
 [article]
   showDate = true
@@ -51,7 +56,9 @@ mainSections = ["posts", "oldposts"]
   showBreadcrumbs = true
   showSummary = true
   showTableOfContents = true
+  showTaxonomies = false
   groupByYear = true
+  paginationWidth = 1
 
 [sitemap]
   excludedKinds = ["taxonomy", "term"]
