Fix base url for GitHub Pages

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL https://major.io
 
       - name: Fix RSS feed
         run: |
