--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -1,7 +1,8 @@
 name: Deploy to AWS S3/CloudFront
 
-# CloudFlare pages is the default mechanism for publishing.
 on:
+  push:
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
