--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -25,10 +25,22 @@ URL = "s3://major.io?region=us-east-1"
 cloudFrontDistributionID =	"E2CVUP8JO07HJ2"
 
 [[deployment.matchers]]
-pattern = "^.+\\.(js|css|png|jpg|gif|svg|ttf)$"
-cacheControl = "max-age=2592000, no-transform, public"
-gzip = true
+# Cache static assets for 1 year.
+pattern = "^.+\\.(js|css|svg|ttf)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = false
+
+[[deployment.matchers]]
+pattern = "^.+\\.(png|jpg)$"
+cacheControl = "max-age=31536000, no-transform, public"
+gzip = false
+
+[[deployment.matchers]]
+# Set custom content type for /sitemap.xml
+pattern = "^sitemap\\.xml$"
+contentType = "application/xml"
+gzip = false
 
 [[deployment.matchers]]
 pattern = "^.+\\.(html|xml|json)$"
-gzip = true
+gzip = false
